# reddit-nlp

./: .gitignore  00_new_features.ipynb  00_new_features.py  01_best_model  01_choose_model.ipynb  01_choose_model.py  02_improve_model.ipynb  02_improve_model.py  03_model_results.ipynb  03_model_results.py  CHANGELOG.md  CONFIG.py  DS_Features and Plots.ipynb  DS_MASTER.ipynb  DS_Savior.ipynb  DS_analyze_model_comparison_reports.ipynb  DS_best_model_thorough_grid.ipynb  DS_best_model_validation.ipynb  DS_coefficients and stats.ipynb  DS_crossfold.py  DS_gridsearch_best_model.ipynb  DS_scikitnn_vs_xgboost.ipynb  DS_special_models.ipynb  DS_test.py  DS_wordclouds.ipynb  Pipfile  README.md  TODO_BUGS.md  compare_models.py  find_best_model.ipynb  helpers.py  plot_styles.ipynb  pyproject.toml  reddit.sqlite  requirements.txt  saved_code.py  scraper.py  visualizer.py
code/: 01_API_Gathering.ipynb  02_Clean_Preprocess.ipynb  05_Functions.ipynb  databases.py  dataloader.py  ds_workflow.ipynb  grid_models.py  reddit_functions.py  scraper.ipynb  scraper.py  scraper_config.json  scraping.py
data/: anxiety.csv  depression.csv  depressionanxiety.csv  reddit.sqlite  science.csv  science_df.csv  sciencetechnology.csv  scitech.csv  tech_df.csv  technology.csv
data_science/: Find the Best Model.ipynb
helpers/: compare_df_04022020  compare_df_2020-04-03 13:08:29.826182  compare_df_2020-04-03 13:57:52.270616  databases.py  dataloader.py  decorator_patterns..ipynb  grid_models.py  reddit_functions.py  scraper.ipynb  scraper.py  scraper_config.json
scraper_configs/: example.ini  (+1 more)
(+119 files in other folders)
