[tool.poetry]
name = "reddit-nlp"
version = "0.1.0"
description = ""
authors = ["Chris Birch <datapointchris@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"
pandas = "^2.2.2"
numpy = "^1.26.4"
scikit-learn = "^1.4.2"
jupyter = "^1.0.0"
wordcloud = "^1.9.3"
seaborn = "^0.13.2"
xgboost = "^2.0.3"
tqdm = "^4.66.2"
imblearn = "^0.0"
jupyter-contrib-nbextensions = "^0.7.0"
boto3 = "^1.34.88"
requests = "^2.31.0"
pillow = "^10.3.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
autopep8 = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
